--- a/research/massivepilot/kravcomp.ipynb
+++ b/research/massivepilot/kravcomp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -109,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "3"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,37 +130,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 4]\n",
-      "[\"'A2142'\" \"'MKW3s'\"]\n",
-      "[ 12.03592491  12.04804516]\n"
+      "[0 4 5]\n",
+      "[\"'A2142'\" \"'MKW3s'\" \"'A2052'\"]\n"
      ]
     }
    ],
    "source": [
     "print(gd)\n",
-    "print(name[gd])\n",
-    "print(rmcat['MSTAR'][idx[gd]])"
+    "print(name[gd])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 239.58332907  230.46604816]\n",
-      "[ 27.23341292   7.70881574]\n",
-      "[ 0.09577668  0.06400454]\n"
+      "[ 239.58332907  230.46604816  229.18537268]\n",
+      "[ 27.23341292   7.70881574   7.02162407]\n",
+      "[ 0.09577668  0.06400454  0.05806554]\n"
      ]
     }
    ],
