working on photometric residals

--- a/research/massivepilot/kravcomp.ipynb
+++ b/research/massivepilot/kravcomp.ipynb
@@ -271,7 +271,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -288,13 +290,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "$\\alpha^2$"
+   ]
   }
  ],
  "metadata": {
