cleaned up the notebooks. still need some work, but much better

--- a/research/massivepilot/photometry.ipynb
+++ b/research/massivepilot/photometry.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Objective: Compare the photometry between PyMorph and SDSS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -75,20 +82,12 @@
    },
    "outputs": [],
    "source": [
+    "# Read in all necessary data\n",
     "pypath = os.path.join(os.sep, 'global', 'work', 'projects', 'legacysurvey', 'legacycentrals')\n",
     "meertcat = os.path.join(pypath, 'meert_et_al_data_tables_v2')\n",
     "mendelcat = os.path.join(pypath, 'UPenn_PhotDec_Mstar_mlMendel14.dat')\n",
-    "wisccat = os.path.join(pypath, 'UPenn_PhotDec_Mstar_mlPCAWiscM11.dat')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "wisccat = os.path.join(pypath, 'UPenn_PhotDec_Mstar_mlPCAWiscM11.dat')\n",
+    "\n",
     "# Read the Mendel catalog\n",
     "columns = ('GalCount', 'FlagSerExp', 'Mstar_Tab5_Pymorph',\n",
     "           'Mstar_Tab5_Truncated', 'Mstar_Tab3_Pymorph',\n",
@@ -96,15 +95,14 @@
     "           'Mstar_Tab3_Mendel', 'Mstar_Tab5_cModel',\n",
     "           'Mstar_Tab3_cModel')\n",
     "dtype = np.dtype([(col, np.float) for col in columns])\n",
-    "allmendel = np.loadtxt(mendelcat, dtype=dtype)\n",
-    "#allmendel.dtype.names"
+    "allmendel = np.loadtxt(mendelcat, dtype=dtype)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Just doing all of the cuts on the fly. Each set has to be cared for separately, as different objects in each have bad flags (i.e. -999 for M*). I could write a function, but it's worth the effort at this point because there isn't a very high combinatoric multiplicity. "
+    "#### Just doing all of the cuts on the fly. Each set has to be cared for separately, as different objects in each have bad flags (i.e. -999 for M*). I could write a function, but it's worth the effort at this point because there isn't a very high combinatoric multiplicity. This looks kind of funky, so I'm leaving it as is for now."
    ]
   },
   {
@@ -135,7 +133,6 @@
    ],
    "source": [
     "flags = (np.where(allmendel['FlagSerExp'] == 0))[0]\n",
-    "#print('Keeping {} / {} measurements in the Mendel catalog.'.format(len(keep), len(allmendel)))\n",
     "mendel = allmendel[flags]\n",
     "keep = np.where((mendel['Mstar_Tab3_Pymorph'] > 0) * (mendel['Mstar_Tab3_cModel'] > 0))[0]\n",
     "mendel2 = mendel[keep]\n",
@@ -173,7 +170,6 @@
    ],
    "source": [
     "flags = (np.where(allmendel['FlagSerExp'] == 0))[0]\n",
-    "#print('Keeping {} / {} measurements in the Mendel catalog.'.format(len(keep), len(allmendel)))\n",
     "mendel = allmendel[flags]\n",
     "keep = np.where((mendel['Mstar_Tab5_Pymorph'] > 0) * (mendel['Mstar_Tab5_cModel'] > 0))[0]\n",
     "mendel2 = mendel[keep]\n",
@@ -211,7 +207,6 @@
    ],
    "source": [
     "flags = (np.where(allmendel['FlagSerExp'] == 0))[0]\n",
-    "#print('Keeping {} / {} measurements in the Mendel catalog.'.format(len(keep), len(allmendel)))\n",
     "mendel = allmendel[flags]\n",
     "keep = np.where((mendel['Mstar_Tab3_Truncated'] > 0) * (mendel['Mstar_Tab3_cModel'] > 0))[0]\n",
     "mendel2 = mendel[keep]\n",
@@ -249,7 +244,6 @@
    ],
    "source": [
     "flags = (np.where(allmendel['FlagSerExp'] == 0))[0]\n",
-    "#print('Keeping {} / {} measurements in the Mendel catalog.'.format(len(keep), len(allmendel)))\n",
     "mendel = allmendel[flags]\n",
     "keep = np.where((mendel['Mstar_Tab5_Truncated'] > 0) * (mendel['Mstar_Tab5_cModel'] > 0))[0]\n",
     "mendel2 = mendel[keep]\n",
