created a fits file for matching

--- a/research/massivepilot/kravcomp.ipynb
+++ b/research/massivepilot/kravcomp.ipynb
@@ -11,8 +11,10 @@
     "\n",
     "* In this notebook, we first use the `astropy` function `match_catalog_to_sky` to find the overlap between Kravtsov's BCGs and our `RedMaPPer` sample. The RA/Dec of the sources from Kravtsov were hand-picked from SDSS DR13. Our finalized coordinates are available on our GutHub in an `ecsv` file.\n",
     "\n",
-    "    * [SDSS DR13](http://skyserver.sdss.org/dr13/en/tools/chart/navi.aspx)\n",
-    "    * [Finalized Coordinates](https://github.com/moustakas/siena-astrophysics/blob/masscompare/research/massivepilot/kravsources.ecsv)\n",
+    "    * <a href=\"http://skyserver.sdss.org/dr13/en/tools/chart/navi.aspx\" target=\"_blank\">SDSS DR13</a>\n",
+    "    * <a href=\"https://github.com/moustakas/siena-astrophysics/blob/masscompare/research/massivepilot/kravsources.ecsv\" target=\"_blank\">Finalized Coordinates</a>\n",
+    "    \n",
+    "    * <a href=\"https://yymao.github.io/decals-image-list-tool/\" target=\"_blank\">Make Some Quick Cutouts</a>\n",
     "\n",
     "\n",
     "* We then compare the stellar masses (M*) of the matching sources."
@@ -20,7 +22,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<center><img src=\"https://omundy.files.wordpress.com/2012/04/i-will-not-write-any-more-bad-code.gif\" \n",
+       "alt=\"Jokes\"></center>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<center><img src=\"https://omundy.files.wordpress.com/2012/04/i-will-not-write-any-more-bad-code.gif\" \n",
+    "alt=\"Jokes\"></center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -72,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -139,8 +166,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Reading in all the RedMaPPer iSEDfit catalog.\n",
@@ -152,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -163,17 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<astropy.io.fits.hdu.table.BinTableHDU object at 0x7f960e163908>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "satellites = os.path.join(rmpath, 'redmapper_isedfit_v5.10_satellites.fits.gz')\n",
     "satinfo = fits.open(satellites)"
@@ -181,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -196,8 +217,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rcoord = SkyCoord(ra=satinfo[1].data['RA']*u.degree, dec=satinfo[1].data['DEC']*u.degree)\n",
@@ -207,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -264,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -292,6 +315,22 @@
     "print(rmcat['MSTAR_50'][idx[gd]])\n",
     "print(rmcat['MSTAR_AVG'][idx[gd]])\n",
     "print(rmcat['MSTAR_ERR'][idx[gd]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a custom FITS file for matching purposes\n",
+    "from astropy.io import fits\n",
+    "from astropy.table import Table, Column\n",
+    "out = Table()\n",
+    "out.add_column(Column(name='RA', data=rmcat['RA'][idx[gd]]))\n",
+    "out.add_column(Column(name='DEC', data=rmcat['DEC'][idx[gd]]))\n",
+    "out.write(os.path.join(os.sep, 'home','kjnapes', 'siena-astrophysics', 'research', 'massivepilot',\n",
+    "                           'rmmatches.fits'))"
    ]
   },
   {
@@ -410,15 +449,6 @@
     "ax4.scatter(sourceRA[gdpy], sourceDEC[gdpy], alpha=0.9, color='white', label='Kravtsov (matched)')\n",
     "ax4.legend(loc='upper left')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
