--- a/research/massivepilot/masscomp.ipynb
+++ b/research/massivepilot/masscomp.ipynb
@@ -10,6 +10,31 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<center><img src=\"http://s2.quickmeme.com/img/c2/c2828e70e296c1c79ebda75bbde83368e9680437e62b91229ca0959ff0685936.jpg\" \n",
+       "alt=\"Jokes\" style=\"width:406px;height:304px;\"></center>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<center><img src=\"http://s2.quickmeme.com/img/c2/c2828e70e296c1c79ebda75bbde83368e9680437e62b91229ca0959ff0685936.jpg\" \n",
+    "alt=\"Jokes\" style=\"width:406px;height:304px;\"></center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
