added cutout tool to the jupyter notebook

--- a/research/massivepilot/kravcomp.ipynb
+++ b/research/massivepilot/kravcomp.ipynb
@@ -12,6 +12,7 @@
     "* In this notebook, we first use the `astropy` function `match_catalog_to_sky` to find the overlap between Kravtsov's BCGs and our `RedMaPPer` sample. The RA/Dec of the sources from Kravtsov were hand-picked from SDSS DR13. Our finalized coordinates are available on our GutHub in an `ecsv` file.\n",
     "\n",
     "    * <a href=\"http://skyserver.sdss.org/dr13/en/tools/chart/navi.aspx\" target=\"_blank\">SDSS DR13</a>\n",
+    "    * <a href=\"http://legacysurvey.org/viewer\" target=\"_blank\">DECaLS Sky Viewer</a>\n",
     "    * <a href=\"https://github.com/moustakas/siena-astrophysics/blob/masscompare/research/massivepilot/kravsources.ecsv\" target=\"_blank\">Finalized Coordinates</a>\n",
     "    \n",
     "    * <a href=\"https://yymao.github.io/decals-image-list-tool/\" target=\"_blank\">Make Some Quick Cutouts</a>\n",
@@ -86,6 +87,7 @@
     "from astropy.io.ascii import read\n",
     "from astropy.coordinates import SkyCoord\n",
     "from astropy import units as u\n",
+    "from astropy.io import fits\n",
     "import fitsio\n",
     "import seaborn"
    ]
@@ -181,23 +183,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from astropy.io import fits"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "satellites = os.path.join(rmpath, 'redmapper_isedfit_v5.10_satellites.fits.gz')\n",
-    "satinfo = fits.open(satellites)"
+    "# WARNING! This cell is huge. It takes a long time to run.\n",
+    "#satellites = os.path.join(rmpath, 'redmapper_isedfit_v5.10_satellites.fits.gz')\n",
+    "#satinfo = fits.open(satellites)"
    ]
   },
   {
@@ -319,18 +311,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate a custom FITS file for matching purposes\n",
-    "from astropy.io import fits\n",
     "from astropy.table import Table, Column\n",
     "out = Table()\n",
     "out.add_column(Column(name='RA', data=rmcat['RA'][idx[gd]]))\n",
     "out.add_column(Column(name='DEC', data=rmcat['DEC'][idx[gd]]))\n",
     "out.write(os.path.join(os.sep, 'home','kjnapes', 'siena-astrophysics', 'research', 'massivepilot',\n",
-    "                           'rmmatches.fits'))"
+    "                           'rmmatches.fits'), overwrite=True) # Clobber is deprecated"
    ]
   },
   {
@@ -449,6 +440,47 @@
     "ax4.scatter(sourceRA[gdpy], sourceDEC[gdpy], alpha=0.9, color='white', label='Kravtsov (matched)')\n",
     "ax4.legend(loc='upper left')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"700\"\n",
+       "            height=\"350\"\n",
+       "            src=\"cutouts.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f6cbaef2390>"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import IFrame\n",
+    "IFrame('cutouts.html', width=700, height=350)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
