Wednesday blog update

--- a/summer2017/stillman/Stillman_2017_notebook.ipynb
+++ b/summer2017/stillman/Stillman_2017_notebook.ipynb
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Monday 5/22/2017\n",
+    "# Monday 5/22/2017\n",
     "worked from 9 - 12, 12:30 - 5 \n",
     "\n",
     "Completed:\n",
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tuesday 5/22/2017\n",
+    "# Tuesday 5/22/2017\n",
     "\n",
     "Completed:\n",
     "Scipy lecture notes - begun to learn,\n",
@@ -175,20 +175,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wednesday 5/22/2017\n",
+    "# Wednesday 5/22/2017\n",
     "\n",
     "Completed: \n",
     "prospector tutorial, \n",
     "python dictionary tutorial. \n",
+    "Note: do not close github repositorys into git hub repositorys. \n",
+    "Begun to install / understand prospector pipeline.\n",
     "\n",
-    "Begun to install / understand prospector pipeline."
+    "Spent some time going over prospector code. Ran into some errors and will tackle tomorrow. Errors include missing files and import data. Simple fixes but i do not know how to tackle. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thursday 5/22/2017\n",
+    "# Thursday 5/22/2017\n",
     "\n"
    ]
   },
@@ -196,14 +198,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Friday 5/22/2017\n",
+    "# Friday 5/22/2017\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     " "
